# dump-follow-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements-dev.txt  requirements.txt  setup.cfg
.claude/: settings.json
.github/workflows/: ci.yml
config/: config.yaml
data/: labels.db
documentation/: ACTIVE_LEARNING.md  ARCHITECTURE.md  PROJECT_OVERVIEW.md  SVSP_MODEL.md  SVSP_MODEL_DOCUMENTATION.md  SYSTEM_FLOW.md  TRAINING_GUIDE.md
firmware/esp32_motor/: esp32_motor.ino
robot/: __init__.py  config.py  logger.py
robot/api/: app.py  state.py
robot/api/routes/: control.py  model.py  review.py  status.py  video.py
robot/comms/: __init__.py  protocol.py  serial_driver.py
robot/control/: __init__.py  follower.py  motor.py  pid.py
robot/learning/: __init__.py  active_trainer.py  collector.py  label_store.py  tiny_nn.py
robot/vision/: __init__.py  detector.py  frame_pipeline.py  motion.py  svsp.py  tracker.py
robot/voice/: __init__.py  intent.py  stt.py  voice_controller.py
scripts/: auto_label.py  collect_data.py  download_model.py  install.ps1  install.sh  prepare_dataset.py  run_robot.sh
tests/: conftest.py  test_api.py  test_detector.py  test_follower.py  test_frame_pipeline.py  test_intent.py  test_motion.py  test_motor.py  test_pid.py  test_serial.py  test_svsp.py  test_tracker.py  test_training.py
training/: __init__.py  augmentation.py  dataset.py  train.py
