[metadata]
name = tiny-ai-robot
version = 1.0.0
description = Tiny Intelligent Vision Robot — YOLO person following + PID + voice control
author = Robot Developer
python_requires = >=3.10

[options]
packages = find:
package_dir = . = .

[tool:pytest]
testpaths = tests
asyncio_mode = auto
timeout = 30
addopts = -v --tb=short --cov=robot --cov-report=term-missing

[coverage:run]
source = robot
omit = tests/*

[mypy]
python_version = 3.10
ignore_missing_imports = true
strict = false
